# eldritch-oracle

./: .env  .env.template  .gitignore  Makefile  README.md  main.py  pyproject.toml
api/: routes.py
core/: config.py
k8s/: elastic-deployment.yaml  elastic-secret.yaml
k8s/elasticsearch/: elastic-pvc.yaml  elastic-service.yaml
k8s/llm/: llm-deployment.yaml  llm-deployment.yaml.template  llm-pv.yaml.template  llm-pvc.yaml  llm-service.yaml
k8s/vllm/: vllm-deployment.yaml.template  vllm-pv.yaml.template  vllm-pvc.yaml  vllm-service.yaml
models/: chat.py
scripts/: .env  download_model.py  index_chunks.py  prep_docs.py  search_chunks.py  test_es_connection.py  test_es_index.py  test_llm_connection.py
services/: chat_service.py  search_service.py  vector_store.py
src/: main.py
src/api/: routes.py
src/core/: config.py
src/models/: chat.py
src/services/: chat_service.py
