[project]
name = "eldritch-oracle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "elasticsearch>=9.0.2",
    "requests>=2.32.3",
    "sentence-transformers>=4.1.0",
    "spacy>=3.8.7",
    "transformers>=4.52.4",
]
