[project]
name = "eldritch-oracle"
version = "0.1.0"
author = "Jennifer Sawyer"
description = "A sample barebones RAG agent."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "elasticsearch>=9.0.2",
    "fastapi>=0.115.12",
    "openai>=1.86.0",
    "python-json-logger>=3.3.0",
    "requests>=2.32.3",
    "sentence-transformers>=4.1.0",
    "spacy>=3.8.7",
    "transformers>=4.52.4",
    "uvicorn>=0.34.3",
]
[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "ruff>=0.9.9",
]